--- a/src/Product/ProductList.css
+++ b/src/Product/ProductList.css
@@ -16,11 +16,17 @@
 }
 
 .product-item {
-  border: 1px solid #ccc;
+  border: 2px solid #686363;
   border-radius: 5px;
   padding: 10px;
+  margin-bottom: 10px;
   width: 200px;
   text-align: center;
+}
+
+.product-item p {
+  /* text-align: center; */
+  text-align: left;
 }
 
 .product-item img {
