--- a/src/Product/CreateProduct.css
+++ b/src/Product/CreateProduct.css
@@ -4,7 +4,7 @@
   max-width: 400px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #f5f5f5;
+  background-color: #f6df7a;
   border-radius: 5px;
 }
 
